--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
 		"@radix-ui/react-tooltip": "^1.2.0",
 		"@t3-oss/env-core": "^0.12.0",
 		"@t3-oss/env-nextjs": "^0.12.0",
-		"@tanstack/react-query": "^5.74.0",
+		"@tanstack/react-query": "^5.74.3",
 		"@trpc/client": "^11.1.0",
 		"@trpc/react-query": "^11.1.0",
 		"@trpc/server": "^11.1.0",
@@ -98,16 +98,15 @@
 		"cloudinary": "^2.6.0",
 		"clsx": "^2.1.1",
 		"color": "^5.0.0",
-		"drizzle-orm": "^0.41.0",
+		"drizzle-orm": "^0.42.0",
 		"drizzle-zod": "^0.7.1",
 		"emoji-picker-react": "^4.12.2",
 		"eslint-config-next": "^15.3.0",
 		"ioredis": "^5.6.1",
-		"latest": "^0.2.0",
 		"levenshtein-edit-distance": "^3.0.1",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.488.0",
-		"motion": "^12.6.5",
+		"motion": "^12.7.3",
 		"next": "^15.3.0",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
@@ -115,6 +114,7 @@
 		"react-dom": "^19.1.0",
 		"react-email": "4.0.7",
 		"react-hook-form": "^7.55.0",
+		"react-sortablejs": "^6.1.4",
 		"react-use-measure": "^2.1.7",
 		"resend": "^4.2.0",
 		"server-only": "^0.0.1",
@@ -129,7 +129,7 @@
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.28.1",
+		"@changesets/cli": "^2.29.1",
 		"@commitlint/cli": "^19.8.0",
 		"@commitlint/config-conventional": "^19.8.0",
 		"@commitlint/cz-commitlint": "^19.8.0",
@@ -140,18 +140,18 @@
 		"@next/eslint-plugin-next": "^15.3.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/postcss": "^4.1.3",
+		"@tailwindcss/postcss": "^4.1.4",
 		"@tailwindcss/typography": "^0.5.16",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/bun": "^1.2.9",
 		"@types/lodash": "^4.17.16",
 		"@types/node": "^22.14.1",
-		"@types/react": "^19.1.1",
+		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"@types/ws": "^8.18.1",
 		"commitizen": "^4.3.1",
 		"cspell": "^8.18.1",
-		"drizzle-kit": "^0.30.6",
+		"drizzle-kit": "^0.31.0",
 		"eslint": "^9.24.0",
 		"eslint-config-prettier": "^10.1.2",
 		"eslint-plugin-prettier": "^5.2.6",
@@ -169,7 +169,7 @@
 		"prettier-remove-unused-imports": "^1.1.21",
 		"sharp": "^0.34.1",
 		"tailwind-scrollbar": "^4.0.2",
-		"tailwindcss": "^4.1.3",
+		"tailwindcss": "^4.1.4",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.8.3"
 	},
