--- a/package.json
+++ b/package.json
@@ -67,92 +67,101 @@
 		}
 	},
 	"dependencies": {
+		"@ai-sdk/react": "^1.2.9",
+		"@blocknote/code-block": "^0.29.1",
+		"@blocknote/core": "^0.29.1",
+		"@blocknote/react": "^0.29.1",
+		"@blocknote/shadcn": "^0.29.1",
+		"@blocknote/xl-multi-column": "^0.29.1",
 		"@hookform/resolvers": "^5.0.1",
 		"@neondatabase/serverless": "^1.0.0",
 		"@orama/cuid2": "^2.2.3",
-		"@radix-ui/react-accordion": "^1.2.4",
-		"@radix-ui/react-avatar": "^1.1.4",
-		"@radix-ui/react-checkbox": "^1.1.5",
-		"@radix-ui/react-collapsible": "^1.1.4",
-		"@radix-ui/react-dialog": "^1.1.7",
-		"@radix-ui/react-dropdown-menu": "^2.1.7",
-		"@radix-ui/react-label": "^2.1.3",
-		"@radix-ui/react-navigation-menu": "^1.2.6",
-		"@radix-ui/react-popover": "^1.1.7",
-		"@radix-ui/react-radio-group": "^1.2.4",
-		"@radix-ui/react-scroll-area": "^1.2.4",
-		"@radix-ui/react-select": "^2.1.7",
-		"@radix-ui/react-separator": "^1.1.3",
+		"@radix-ui/react-accordion": "^1.2.8",
+		"@radix-ui/react-avatar": "^1.1.7",
+		"@radix-ui/react-checkbox": "^1.2.3",
+		"@radix-ui/react-collapsible": "^1.1.8",
+		"@radix-ui/react-dialog": "^1.1.11",
+		"@radix-ui/react-dropdown-menu": "^2.1.12",
+		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-navigation-menu": "^1.2.10",
+		"@radix-ui/react-popover": "^1.1.11",
+		"@radix-ui/react-radio-group": "^1.3.4",
+		"@radix-ui/react-scroll-area": "^1.2.6",
+		"@radix-ui/react-select": "^2.2.2",
+		"@radix-ui/react-separator": "^1.1.4",
 		"@radix-ui/react-slot": "^1.2.0",
-		"@radix-ui/react-switch": "^1.1.4",
-		"@radix-ui/react-tabs": "^1.1.4",
-		"@radix-ui/react-tooltip": "^1.2.0",
-		"@t3-oss/env-core": "^0.12.0",
-		"@t3-oss/env-nextjs": "^0.12.0",
-		"@tanstack/react-query": "^5.74.3",
-		"@trpc/client": "^11.1.0",
-		"@trpc/react-query": "^11.1.0",
-		"@trpc/server": "^11.1.0",
+		"@radix-ui/react-switch": "^1.2.2",
+		"@radix-ui/react-tabs": "^1.1.9",
+		"@radix-ui/react-tooltip": "^1.2.4",
+		"@t3-oss/env-core": "^0.13.0",
+		"@t3-oss/env-nextjs": "^0.13.0",
+		"@tanstack/react-query": "^5.74.4",
+		"@trpc/client": "^11.1.1",
+		"@trpc/react-query": "^11.1.1",
+		"@trpc/server": "^11.1.1",
+		"ai": "^4.3.10",
 		"better-auth": "1.2.7",
 		"class-variance-authority": "^0.7.1",
 		"cloudinary": "^2.6.0",
 		"clsx": "^2.1.1",
 		"color": "^5.0.0",
-		"drizzle-orm": "^0.42.0",
+		"drizzle-orm": "^0.43.1",
 		"drizzle-zod": "^0.7.1",
 		"emoji-picker-react": "^4.12.2",
-		"eslint-config-next": "^15.3.0",
+		"eslint-config-next": "^15.3.1",
 		"ioredis": "^5.6.1",
 		"levenshtein-edit-distance": "^3.0.1",
 		"lodash": "^4.17.21",
-		"lucide-react": "^0.488.0",
-		"motion": "^12.7.3",
-		"next": "^15.3.0",
+		"lucide-react": "^0.503.0",
+		"motion": "^12.9.2",
+		"next": "^15.3.1",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-email": "4.0.7",
-		"react-hook-form": "^7.55.0",
+		"react-hook-form": "^7.56.1",
 		"react-sortablejs": "^6.1.4",
 		"react-use-measure": "^2.1.7",
-		"resend": "^4.2.0",
+		"resend": "^4.4.1",
 		"server-only": "^0.0.1",
 		"sonner": "^2.0.3",
 		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.2.0",
 		"timeago.js": "^4.0.2",
+		"tiptap-extension-auto-joiner": "^0.1.3",
+		"use-debounce": "^10.0.4",
 		"use-resize-observer": "^9.1.0",
 		"usehooks-ts": "^3.1.1",
 		"ws": "^8.18.1",
-		"zod": "^3.24.2",
+		"zod": "^3.24.3",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.29.1",
+		"@changesets/cli": "^2.29.2",
 		"@commitlint/cli": "^19.8.0",
 		"@commitlint/config-conventional": "^19.8.0",
 		"@commitlint/cz-commitlint": "^19.8.0",
 		"@eioluseyi/tailwind-fade": "^1.0.1",
 		"@eslint/eslintrc": "^3.3.1",
-		"@eslint/js": "^9.24.0",
+		"@eslint/js": "^9.25.1",
 		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-		"@next/eslint-plugin-next": "^15.3.0",
+		"@next/eslint-plugin-next": "^15.3.1",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/postcss": "^4.1.4",
 		"@tailwindcss/typography": "^0.5.16",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/bun": "^1.2.9",
+		"@types/bun": "^1.2.10",
 		"@types/lodash": "^4.17.16",
-		"@types/node": "^22.14.1",
+		"@types/node": "^22.15.2",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"@types/ws": "^8.18.1",
 		"commitizen": "^4.3.1",
-		"cspell": "^8.18.1",
+		"cspell": "^8.19.3",
 		"drizzle-kit": "^0.31.0",
-		"eslint": "^9.24.0",
+		"eslint": "^9.25.1",
 		"eslint-config-prettier": "^10.1.2",
 		"eslint-plugin-prettier": "^5.2.6",
 		"eslint-plugin-react": "^7.37.5",
