--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
 		}
 	},
 	"dependencies": {
-		"@ai-sdk/react": "^1.2.9",
+		"@ai-sdk/react": "^1.2.11",
 		"@blocknote/code-block": "^0.29.1",
 		"@blocknote/core": "^0.29.1",
+		"@blocknote/mantine": "^0.29.1",
 		"@blocknote/react": "^0.29.1",
-		"@blocknote/shadcn": "^0.29.1",
 		"@blocknote/xl-multi-column": "^0.29.1",
 		"@hookform/resolvers": "^5.0.1",
 		"@neondatabase/serverless": "^1.0.0",
@@ -93,13 +93,13 @@
 		"@radix-ui/react-switch": "^1.2.2",
 		"@radix-ui/react-tabs": "^1.1.9",
 		"@radix-ui/react-tooltip": "^1.2.4",
-		"@t3-oss/env-core": "^0.13.0",
-		"@t3-oss/env-nextjs": "^0.13.0",
-		"@tanstack/react-query": "^5.74.4",
-		"@trpc/client": "^11.1.1",
-		"@trpc/react-query": "^11.1.1",
-		"@trpc/server": "^11.1.1",
-		"ai": "^4.3.10",
+		"@t3-oss/env-core": "^0.13.4",
+		"@t3-oss/env-nextjs": "^0.13.4",
+		"@tanstack/react-query": "^5.75.1",
+		"@trpc/client": "^11.1.2",
+		"@trpc/react-query": "^11.1.2",
+		"@trpc/server": "^11.1.2",
+		"ai": "^4.3.13",
 		"better-auth": "1.2.7",
 		"class-variance-authority": "^0.7.1",
 		"cloudinary": "^2.6.0",
@@ -112,18 +112,18 @@
 		"ioredis": "^5.6.1",
 		"levenshtein-edit-distance": "^3.0.1",
 		"lodash": "^4.17.21",
-		"lucide-react": "^0.503.0",
-		"motion": "^12.9.2",
+		"lucide-react": "^0.506.0",
+		"motion": "^12.9.4",
 		"next": "^15.3.1",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-email": "4.0.7",
+		"react-email": "4.0.11",
 		"react-hook-form": "^7.56.1",
 		"react-sortablejs": "^6.1.4",
 		"react-use-measure": "^2.1.7",
-		"resend": "^4.4.1",
+		"resend": "^4.5.0",
 		"server-only": "^0.0.1",
 		"sonner": "^2.0.3",
 		"superjson": "^2.2.2",
@@ -135,7 +135,7 @@
 		"usehooks-ts": "^3.1.1",
 		"ws": "^8.18.1",
 		"zod": "^3.24.3",
-		"zustand": "^5.0.3"
+		"zustand": "^5.0.4"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.29.2",
@@ -149,14 +149,14 @@
 		"@next/eslint-plugin-next": "^15.3.1",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/postcss": "^4.1.4",
+		"@tailwindcss/postcss": "^4.1.5",
 		"@tailwindcss/typography": "^0.5.16",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/bun": "^1.2.10",
+		"@types/bun": "^1.2.11",
 		"@types/lodash": "^4.17.16",
-		"@types/node": "^22.15.2",
+		"@types/node": "^22.15.3",
 		"@types/react": "^19.1.2",
-		"@types/react-dom": "^19.1.2",
+		"@types/react-dom": "^19.1.3",
 		"@types/ws": "^8.18.1",
 		"commitizen": "^4.3.1",
 		"cspell": "^8.19.3",
@@ -178,7 +178,7 @@
 		"prettier-remove-unused-imports": "^1.1.21",
 		"sharp": "^0.34.1",
 		"tailwind-scrollbar": "^4.0.2",
-		"tailwindcss": "^4.1.4",
+		"tailwindcss": "^4.1.5",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.8.3"
 	},
